<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pupil_labs_wrapper</name>
  <version>0.0.0</version>
  <description>Wrapper for Pupil Labs glasses using ROS 2</description>

  <maintainer email="kmsw8001@uw.edu">Kyshawn</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>  <!-- Use ament_python for Python packages -->
  
  <build_depend>rclpy</build_depend>
  <depend>std_msgs</depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>egocentric_msg</exec_depend>
  <exec_depend>pupil_labs_realtime_api</exec_depend> <!-- External dependency -->
  <member_of_group>rosidl_interface_packages</member_of_group>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

